--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,8 +1,15 @@
 [supervisord]
 nodaemon=true
 
+[program:xvfb]
+command=/usr/bin/Xvfb :99 -ac -screen 0 1920x1080x24 +extension RANDR
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+
 [program:phantom]
-command=/usr/bin/xvfb-daemon-run phantom /root/go/src/github.com/krisrang/phantom/snap.js
+command=phantom /root/go/src/github.com/krisrang/phantom/snap.js
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
