--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,7 +9,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:phantom]
-command=phantom /root/go/src/github.com/krisrang/phantom/snap.js
+command=phantom -script /root/go/src/github.com/krisrang/phantom/snap.js -port $PORT
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
