Change apt mirrors to online.net mirrors. Fix supervisord commands.

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,14 +2,14 @@
 nodaemon=true
 
 [program:xvfb]
-command=/usr/bin/Xvfb %(ENV_DISPLAY) -ac -screen 0 1920x1080x24 +extension RANDR
+command=/usr/bin/Xvfb %(ENV_DISPLAY)s -ac -screen 0 1920x1080x24 +extension RANDR
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:phantom]
-command=phantom -script /root/go/src/github.com/krisrang/phantom/snap.js -port %(ENV_PORT)
+command=phantom -script /root/go/src/github.com/krisrang/phantom/snap.js -port %(ENV_PORT)s
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/dev/stdout
