--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,9 +4,9 @@ nodaemon=true
 [program:xvfb]
 command=/usr/bin/Xvfb %(ENV_DISPLAY)s -ac -screen 0 1920x1080x24 +extension RANDR
 autorestart=true
-redirect_stderr=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+stdout_logfile=none
 
 [program:phantom]
 command=phantom -script /root/go/src/github.com/krisrang/phantom/snap.js -port %(ENV_PORT)s
