--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,8 +4,7 @@ nodaemon=true
 [program:xvfb]
 command=/usr/bin/Xvfb %(ENV_DISPLAY)s -ac -screen 0 1920x1080x24 +extension RANDR
 autorestart=true
-stderr_logfile=/dev/stdout
-stderr_logfile_maxbytes=0
+stderr_logfile=none
 stdout_logfile=none
 
 [program:phantom]
